vuejs-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuejs
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
  labels:
    app: vuejs
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: vuejs
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: vuejs
  labels:
    app: vuejs
spec:
  selector:
    matchLabels:
      app: vuejs
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vuejs
        tier: frontend
    spec:
      containers:
      - image: sitharamaneesh/firstrepo:latest
        name: vuejs
        ports:
        - containerPort: 8080
          name: vuejs
        readinessProbe:
          httpGet:
            path: /
            port: 8080
